syntax = "proto3";

package user.auth.request;

option go_package = "./;uapb";

// The request schema for calling Store on user.
message UserStoreRequest {
    string first_name = 1;
    string last_name  = 2;
    string email      = 3;
    string password   = 4;
}

// The request schema for calling FindBy on user.
message UserFindByRequest {
    string email    = 1;
    string password = 2;
}
